# hl-bump

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bump.hdll  compile.hxml  generate-hl-cpp.sh  haxelib.json
bump/: BumpAllocator.hx  BumpArray.hx  BumpCompactArray.hx  Native.hx  bump.idl
generator/: BumpGenerator.hx
src/: bump.cpp  hl-bump.h
tests/: Main.hx
